--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer{
     /* padding-top: 15rem;
      */
-
+    /* margin-top: 20px; */
+    padding-top: 20px;
      position: fixed;
      bottom: 0;
      width: 100%;
